kubernetes/apps/default/parked/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: parked
  namespace: default
  labels:
    app.kubernetes.io/name: parked
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    app.kubernetes.io/name: parked
